2005-03-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-url-readable-string): Check whether
	`w3m-current-coding-system' is valid before calling
	`w3m-url-decode-string'.
	(w3m-local-dirlist-cgi, w3m-w3m-dump-extra): Use
	`w3m-url-readable-string'.
	(w3m-copy-buffer): Copy all buffer-local variables, and do not
	cancel them even if `empty' option is set.
	(w3m-display-progress-message): Import from w3m-util.el to
	suppress byte-compile warnings.

	* w3m-util.el (w3m-parse-attributes): Accept XHTML format of
	boolean atttibutes.
	(w3m-display-progress-message): Export to w3m.el.

2005-03-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-url-readable-string): An expression is evaluated
	without checking type.

2005-03-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-show-decoded-url): Update its customize spec to use
	it as the rule set to decode URIs when displaying them.  Changed
	its default value.
	(w3m-url-readable-string): New function to process the above option.
	(w3m-make-help-echo, w3m-make-balloon-help): Do not accept
	`url-decode' option, and use the above function to decore URIs.
	(w3m-fontify-anchors): Follow the above change.
	(w3m-print-current-url, w3m-print-this-url): Call the above function.
	(w3m-make-url-decode-function): Removed.
	(w3m-entity-alist, w3m-about-history): Remove redundant `function'.
	For more detail, see http://www.mew.org/~kazu/doc/elisp/function.html.

2005-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-modeline-title-string): New variable.
	(w3m-modeline-title-timer): New variable.
	(w3m-modeline-title): New function used to truncate the title
	string not to cut the right end of the mode line.  Works only with
	Emacs 22 and newer.
	(w3m-buffer-setup): Use it.

2005-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-help-echo): Make it work with XEmacs.
	(w3m-make-balloon-help): Support decoding URIs.
	(w3m-fontify-anchors): Make the balloon-help show decoded URIs.
