@@ -1,3 +1,10 @@
+2005-03-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-url-readable-string): save matching data.
+
+	* w3m-form.el (w3m-form-input-textarea-mode-setup): An expression
+	is evaluated without checking type, and save matching data.
+
 2005-03-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-url-readable-string): Check whether
